Initial implementation. More tests needed

--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "description": "Pack js and css files in web components",
   "main": "index.js",
   "scripts": {
-    "test": "npm run lint && task-tape test/*.js | tap-summary",
-    "lint": "eslint *.js lib/**/*.js test/*.js bin/*.js",
-    "coverage": "istanbul cover -i 'lib/**/*.js' -i '*.js' --print both task-tape -- test/*.js",
-    "check-coverage": "istanbul check-coverage --statements 90 --functions 90 --branches 85 --lines 90",
-    "upload-coverage": "cat ./coverage/lcov.info | coveralls",
-    "cover": "npm run coverage && npm run check-coverage && npm run upload-coverage"
+    "test": "npm run lint && tap --cov test/*.js",
+    "lint": "eslint *.js 'lib/**/*.js' test/*.js bin/*.js",
+    "coveralls": "COVERALLS_REPO_TOKEN=REPO_TOKEN npm test"
   },
   "repository": {
     "type": "git",
@@ -31,21 +28,17 @@
   },
   "homepage": "https://github.com/zoubin/reduce-component#readme",
   "dependencies": {
-    "custom-resolve": "^0.2.1",
-    "merge-stream": "^1.0.0",
-    "node-promisify": "^0.2.2",
-    "nub": "^1.0.0",
-    "reduce-css": "^1.0.3",
-    "reduce-js": "^3.0.1",
-    "through2": "^2.0.0",
-    "util-mix": "^3.0.2"
+    "mixy": "^1.0.0",
+    "node-promisify": "^1.2.0",
+    "reduce-css": "^2.0.0",
+    "reduce-js": "^4.0.0",
+    "through2": "^2.0.0"
   },
   "devDependencies": {
-    "coveralls": "^2.11.4",
+    "custom-resolve": "^1.0.1",
+    "del": "^2.2.0",
     "eslint": "^1.10.1",
-    "istanbul": "^0.4.0",
-    "tap-summary": "^1.0.0",
-    "tape": "^4.2.0",
-    "task-tape": "^1.0.0"
+    "gulp": "^3.9.0",
+    "tap": "^2.3.1"
   }
 }
