--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "through2": "^2.0.0"
   },
   "devDependencies": {
+    "compare-directory": "^1.0.1",
     "custom-resolve": "^1.0.1",
     "del": "^2.2.0",
     "eslint": "^1.10.1",
