--- a/package.json
+++ b/package.json
@@ -37,11 +37,15 @@
     "node-promisify": "^1.2.0",
     "reduce-css": "^5.0.0",
     "reduce-css-postcss": "^3.0.0",
-    "reduce-js": "^9.0.0"
+    "reduce-js": "^9.0.0",
+    "stream-combiner2": "^1.1.1",
+    "vinyl-buffer": "^1.0.0"
   },
   "devDependencies": {
+    "clean-remains": "^0.1.0",
     "compare-directory": "^1.0.1",
     "custom-resolve": "^1.0.1",
+    "dedupify": "^0.1.0",
     "del": "^2.2.0",
     "eslint": "^2.1.0",
     "gulp": "^3.9.0",
