Feature: options.map

--- a/package.json
+++ b/package.json
@@ -31,12 +31,8 @@
   },
   "homepage": "https://github.com/reducejs/reduce-web-component#readme",
   "dependencies": {
-    "browserify": "^13.0.0",
-    "depsify": "^4.0.0",
-    "mixy": "^1.0.0",
-    "node-promisify": "^1.2.0",
+    "multimatch": "^2.1.0",
     "reduce-css": "^5.0.0",
-    "reduce-css-postcss": "^3.0.0",
     "reduce-js": "^9.0.0",
     "stream-combiner2": "^1.1.1",
     "vinyl-buffer": "^1.0.0"
@@ -49,6 +45,7 @@
     "del": "^2.2.0",
     "eslint": "^2.1.0",
     "gulp": "^3.9.0",
+    "node-promisify": "^1.2.0",
     "tap": "^5.0.0"
   }
 }
