--- a/.eslintrc
+++ b/.eslintrc
@@ -51,7 +51,7 @@ rules:
   no-throw-literal: 2
   no-unused-expressions: 2
   no-void: 2
-  no-warning-comments: [2, { "terms": ["todo", "fixme", "xxx"], "location": "start"  }]
+  # no-warning-comments: [2, { "terms": ["todo", "fixme", "xxx"], "location": "start"  }]
   no-with: 2
   radix: 2
   no-delete-var: 2
