--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
   },
   "homepage": "https://github.com/reducejs/reduce-web-component#readme",
   "dependencies": {
+    "concat-stream": "^1.5.1",
     "multimatch": "^2.1.0",
     "reduce-css": "^5.0.0",
     "reduce-js": "^9.0.0",
+    "shasum": "^1.0.2",
     "stream-combiner2": "^1.1.1",
     "vinyl-buffer": "^1.0.0"
   },
