--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multimatch": "^2.1.0",
     "reduce-css": "^5.0.0",
     "reduce-js": "^9.0.0",
+    "resolve": "^1.1.7",
     "shasum": "^1.0.2",
     "stream-combiner2": "^1.1.1",
     "vinyl-buffer": "^1.0.0"
