--- a/example/plugin/package.json
+++ b/example/plugin/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "ansi-escape": "^1.1.0"
+    "ansi-escape": "^1.1.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-uglifycss": "^1.0.6"
   }
 }
