--- a/package.json
+++ b/package.json
@@ -31,14 +31,12 @@
   },
   "homepage": "https://github.com/reducejs/reduce-web-component#readme",
   "dependencies": {
-    "concat-stream": "^1.5.1",
+    "deps-patch": "^0.1.0",
     "multimatch": "^2.1.0",
-    "reduce-css": "^5.0.0",
-    "reduce-js": "^9.0.0",
+    "reduce-css": "^6.0.0",
+    "reduce-js": "^10.0.1",
     "resolve": "^1.1.7",
-    "shasum": "^1.0.2",
-    "stream-combiner2": "^1.1.1",
-    "vinyl-buffer": "^1.0.0"
+    "stream-combiner2": "^1.1.1"
   },
   "devDependencies": {
     "clean-remains": "^0.1.0",
@@ -49,6 +47,7 @@
     "eslint": "^2.1.0",
     "gulp": "^3.9.0",
     "node-promisify": "^1.2.0",
-    "tap": "^5.0.0"
+    "tap": "^5.0.0",
+    "vinyl-buffer": "^1.0.0"
   }
 }
